[tool.poetry]
name = "igrinsdr"
version = "0.1.0"
description = ""
authors = ["Jae-Joon Lee <lee.j.joon@gmail.com>"]

packages = [
    { include = "igrinsdr", from = 'src'},
    { include = "igrins_instruments", from = 'src'},
]

[tool.poetry.dependencies]
python = ">3.7.1"
pandas = "^1.3"
simplejson
astroscrappy

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
